syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Person {
	rpc GetPersonInfo (PersonLookupModel) returns (PersonModel);
	rpc GetNewPerson (NewPersonRequest) returns (stream PersonModel); //return a set of Person
}

message NewPersonRequest{
}

message PersonLookupModel {
	int32 userId = 1;
}

message PersonModel {
	string firstName = 1;
	string lastName = 2;
	string email = 3;
	int32 age = 4;
}